--- a/app/src/main/res/layout/info_jornada2.xml
+++ b/app/src/main/res/layout/info_jornada2.xml
@@ -18,8 +18,7 @@
         android:backgroundTint="@android:color/transparent"
         android:tint="@android:color/transparent"
         app:layout_constraintStart_toEndOf="@+id/veiculoAnterior"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_directions_blue_a700_48dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/veiculoAtual"
@@ -45,7 +44,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/time_dire"
+        android:id="@+id/tempo_direcao"
         style="@style/TextViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,7 +53,7 @@
         android:drawableStart="@drawable/ic_access_time_blue_a700_24dp"
         android:gravity="center"
         android:text="Tempo de direção ininterrupta:"
-        app:layout_constraintBottom_toTopOf="@+id/last_stop"
+        app:layout_constraintBottom_toTopOf="@+id/last"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -80,7 +79,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/last_stop"
+        android:id="@+id/last"
         style="@style/TextViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -126,7 +125,7 @@
         android:drawableStart="@drawable/ic_access_time_blue_a700_24dp"
         android:text="Data/Hora inicio Movimento:"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/time_dire"
+        app:layout_constraintBottom_toTopOf="@+id/tempo_direcao"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/veiculoAtual" />
 
@@ -151,10 +150,10 @@
         android:layout_marginStart="8dp"
         android:text="@string/teste"
         android:textAlignment="viewStart"
-        app:layout_constraintBottom_toBottomOf="@+id/time_dire"
+        app:layout_constraintBottom_toBottomOf="@+id/tempo_direcao"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/time_dire"
-        app:layout_constraintTop_toTopOf="@+id/time_dire" />
+        app:layout_constraintStart_toEndOf="@+id/tempo_direcao"
+        app:layout_constraintTop_toTopOf="@+id/tempo_direcao" />
 
     <TextView
         android:id="@+id/textViewMove"
@@ -190,9 +189,9 @@
         android:layout_marginStart="8dp"
         android:text="@string/teste"
         android:textAlignment="viewStart"
-        app:layout_constraintBottom_toBottomOf="@+id/last_stop"
+        app:layout_constraintBottom_toBottomOf="@+id/last"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/last_stop"
-        app:layout_constraintTop_toTopOf="@+id/last_stop" />
+        app:layout_constraintStart_toEndOf="@+id/last"
+        app:layout_constraintTop_toTopOf="@+id/last" />
 
 </android.support.constraint.ConstraintLayout>
