--- a/app/src/main/res/layout/info_jornada2.xml
+++ b/app/src/main/res/layout/info_jornada2.xml
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/time_dire"
+        android:id="@+id/tempo_direcao"
         style="@style/TextViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -126,7 +126,7 @@
         android:drawableStart="@drawable/ic_access_time_blue_a700_24dp"
         android:text="Data/Hora inicio Movimento:"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/time_dire"
+        app:layout_constraintBottom_toTopOf="@+id/tempo_direcao"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/veiculoAtual" />
 
@@ -151,10 +151,10 @@
         android:layout_marginStart="8dp"
         android:text="@string/teste"
         android:textAlignment="viewStart"
-        app:layout_constraintBottom_toBottomOf="@+id/time_dire"
+        app:layout_constraintBottom_toBottomOf="@+id/tempo_direcao"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/time_dire"
-        app:layout_constraintTop_toTopOf="@+id/time_dire" />
+        app:layout_constraintStart_toEndOf="@+id/tempo_direcao"
+        app:layout_constraintTop_toTopOf="@+id/tempo_direcao" />
 
     <TextView
         android:id="@+id/textViewMove"
