--- a/app/src/main/res/layout/info_jornada3.xml
+++ b/app/src/main/res/layout/info_jornada3.xml
@@ -110,7 +110,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/time_dire"
+        android:id="@+id/tempo_direcao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -123,7 +123,7 @@
         app:layout_constraintTop_toBottomOf="@+id/start_mov">
 
         <TextView
-            android:id="@+id/time_dire"
+            android:id="@+id/tempo_direcao"
             style="@style/TextViewTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -157,7 +157,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time_dire">
+        app:layout_constraintTop_toBottomOf="@+id/tempo_direcao">
 
         <TextView
             android:id="@+id/last_stop"
