--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -6,11 +6,6 @@
                 android:layout_height="match_parent"
                 tools:context="br.com.technolog.checklist.FormActivity">
 
-    <!--
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" -->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -126,7 +121,7 @@
                     android:id="@android:id/tabs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"/>
+                    android:orientation="horizontal" />
 
                 <FrameLayout
                     android:id="@android:id/tabcontent"
@@ -370,8 +365,7 @@
                             android:id="@+id/group"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:scrollbarStyle="outsideInset"
-                            >
+                            android:scrollbarStyle="outsideInset">
 
                             <LinearLayout
                                 android:id="@+id/grupoItens"
@@ -387,7 +381,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="15dp"
-                            android:text="@string/_0_de_20"/>
+                            android:text="@string/_0_de_20" />
 
                         <RelativeLayout
                             android:layout_width="wrap_content"
@@ -400,7 +394,7 @@
                                 android:layout_alignParentEnd="true"
                                 android:layout_marginEnd="200dp"
                                 android:text="@string/obs"
-                                tools:text="Obs."/>
+                                tools:text="Obs." />
 
                             <TextView
                                 android:id="@+id/fotoLabel"
@@ -409,7 +403,7 @@
                                 android:layout_alignParentEnd="true"
                                 android:layout_marginEnd="40dp"
                                 android:text="@string/foto"
-                                tools:text="Foto"/>
+                                tools:text="Foto" />
                         </RelativeLayout>
 
                         <ListView
@@ -417,7 +411,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:descendantFocusability="afterDescendants"
-                            android:focusable="false"/>
+                            android:focusable="false" />
 
                     </LinearLayout>
 
@@ -425,12 +419,12 @@
                         android:id="@+id/Finalização"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            >
+                            android:layout_height="wrap_content">
 
                             <TextView
                                 android:id="@+id/labelStatusCheck"
@@ -440,8 +434,7 @@
                                 android:layout_marginTop="42dp"
                                 android:text="@string/status_do_checklist"
                                 android:textSize="24sp"
-                                android:textStyle="normal|bold"
-                                />
+                                android:textStyle="normal|bold" />
 
                             <RadioGroup
                                 android:id="@+id/statCheck"
@@ -459,7 +452,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:text="@string/aprovado"
-                                    android:textSize="18sp"/>
+                                    android:textSize="18sp" />
 
                                 <RadioButton
                                     android:id="@+id/reprovado"
@@ -467,7 +460,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:text="@string/reprovado"
-                                    android:textSize="18sp"/>
+                                    android:textSize="18sp" />
 
                                 <RadioButton
                                     android:id="@+id/indefinido"
@@ -475,7 +468,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:text="@string/indefinido"
-                                    android:textSize="18sp"/>
+                                    android:textSize="18sp" />
                             </RadioGroup>
 
                             <TextView
@@ -487,8 +480,7 @@
                                 android:layout_marginTop="80dp"
                                 android:text="@string/coment"
                                 android:textSize="24sp"
-                                android:textStyle="normal|bold"
-                                />
+                                android:textStyle="normal|bold" />
 
 
                             <EditText
@@ -502,7 +494,7 @@
                                 android:inputType="textMultiLine"
                                 android:lines="4"
                                 android:maxLength="4000"
-                                tools:ignore="LabelFor"/>
+                                tools:ignore="LabelFor" />
 
 
                         </RelativeLayout>
@@ -532,12 +524,12 @@
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginBottom="16dp"
                                 android:text="@string/agreement"
-                                android:textColor="@android:color/darker_gray"/>
+                                android:textColor="@android:color/darker_gray" />
 
                             <com.github.gcacace.signaturepad.views.SignaturePad
                                 android:id="@+id/signature_pad"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"/>
+                                android:layout_height="wrap_content" />
 
                             <LinearLayout
                                 android:layout_width="fill_parent"
@@ -553,7 +545,7 @@
                                     android:layout_weight="1"
                                     android:enabled="false"
                                     android:text="@string/clear_pad"
-                                    tools:ignore="ButtonStyle"/>
+                                    tools:ignore="ButtonStyle" />
 
                                 <Button
                                     android:id="@+id/save_button"
@@ -562,7 +554,7 @@
                                     android:layout_weight="1"
                                     android:enabled="false"
                                     android:text="@string/save_signature"
-                                    tools:ignore="ButtonStyle"/>
+                                    tools:ignore="ButtonStyle" />
                             </LinearLayout>
                         </RelativeLayout>
 
@@ -572,7 +564,8 @@
                         android:id="@+id/status"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <TextView
                             android:id="@+id/checkListStatus"
@@ -581,11 +574,90 @@
                             android:layout_marginTop="80dp"
                             android:text="@string/checklist_n_o_enviado"
                             android:textSize="30sp"
-                            android:textStyle="normal|bold"
-                            />
+                            android:textStyle="normal|bold" />
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/engates"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:padding="15dp"
+                        android:visibility="gone">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/linearLayout"
+                                android:layout_marginTop="30dp">
+
+                                <TextView
+                                    android:id="@+id/tv_engate1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/engate_1"
+                                    android:textSize="24sp"
+                                    android:textStyle="normal|bold" />
+
+                                <Spinner
+                                    android:id="@+id/sp_engate1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_below="@+id/linearLayout"
+                                android:orientation="horizontal"
+                                android:id="@+id/linearLayout2"
+                                android:layout_marginTop="30dp">
+
+                                <TextView
+                                    android:id="@+id/tv_engate2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/engate_2"
+                                    android:textSize="24sp"
+                                    android:textStyle="normal|bold" />
+
+                                <Spinner
+                                    android:id="@+id/sp_engate2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_below="@+id/linearLayout2"
+                                android:orientation="horizontal"
+                                android:layout_marginTop="30dp">
+
+                                <TextView
+                                    android:id="@+id/tv_engate3"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="@string/engate_3"
+                                    android:textSize="24sp"
+                                    android:textStyle="normal|bold"/>
+
+                                <Spinner
+                                    android:id="@+id/sp_engate3"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1" />
+                            </LinearLayout>
+                        </RelativeLayout>
+                    </LinearLayout>
                 </FrameLayout>
             </LinearLayout>
 
